--- a/css/styles.css
+++ b/css/styles.css
@@ -285,9 +285,13 @@ nav h1 a {
   padding: 30px 20px 80px;
 	display: flex;
 }
-#reviewform{
+#form-container{
 	display: flex;
-	padding: 30px 20px 80px;
+	padding: 100px;
+}
+#review-form{
+	display: column;
+	padding:10px;
 }
 #reviews-container h2 {
   color: #f58500;
